--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<div class="toolbar" role="banner">
+<div class="toolbar container-fluid" role="banner">
     <span>{{AppTitle}}</span>
       <div class="spacer"></div>
   </div>
