--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<app-manualHome></app-manualHome>
-<app-home></app-home>
+<!--<app-manualHome></app-manualHome>
+<app-home></app-home> -->
+<app-students></app-students>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
