--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,10 +1,14 @@
 
   footer {
     margin-top: 8px;
+    margin-bottom: 20px;
     align-items: center;
     line-height: 20px;
     width: 100%;
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    font-weight: bold;
   }
 
   footer a {
