Angular Models and Form Validations with students array and bootstrap

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,8 @@
  <!-- Footer -->
  <footer class="container-fluid">
-    Angular Training App
+     <div class="col-lg-12 col-md-12 col-sm-12">
+         <div class="row">
+             <p>Angular Training App</p>
+         </div>
+     </div> 
 </footer>
