--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <!--<app-manualHome></app-manualHome>
-<app-home></app-home> -->
-<app-students></app-students>
+<app-home></app-home>
+<app-students></app-students> -->
+<app-about-us></app-about-us>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
