--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,12 +1,18 @@
-
-  footer {
+  footer{
+    align-items: center;
+    background-color: #1976d2;
+    color: white;
+    font-weight: 600;
+    margin-top: 60px;
+    padding-top: 10px;
+  }
+  footer p{
     margin-top: 8px;
     margin-bottom: 20px;
     align-items: center;
     line-height: 20px;
     width: 100%;
     text-align: center;
-    position: absolute;
     bottom: 0;
     font-weight: bold;
   }
